fixing the font size on mobile for the new featured collection

--- a/assets/section-new-featured-collection.css
+++ b/assets/section-new-featured-collection.css
@@ -79,7 +79,8 @@
     }
 
     .new-featured-collection__title {
-        padding: .6rem 1rem;
+        padding: .6rem .5rem;
+        font-size: 15px;
     }
 
     .new-featured-collection__heading {
